<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/movie_image_modify"
        android:layout_width="185px"
        android:layout_height="275px"
        android:src="@drawable/loading"


 />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/movie_title_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_movie_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/movie_released_no_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_movie_released_text" />

            <TextView
                android:id="@+id/movie_released_date_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="5/15/2015" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <TextView
            android:id="@+id/movie_popularity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_movie_popularity_text" />

            <!--<ImageView-->
                <!--android:id="@+id/movie_popularity_image_modify"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:src="@drawable/ic_launcher_background" />-->

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <!--<ImageView-->
                <!--android:id="@+id/imageview_star_image"-->
                <!--android:layout_width="49dp"-->
                <!--android:layout_height="49dp"-->
                <!--app:srcCompat="@drawable/ic_launcher_foreground" />-->

            <TextView
                android:id="@+id/textview_open_bracket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(" />

            <TextView
                android:id="@+id/movie_rating_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8.7"

                />

            <TextView
                android:id="@+id/movie_out_of_ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/10)" />

            <TextView
                android:id="@+id/movie_voted_by_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text=" voted by " />

            <TextView
                android:id="@+id/movie_user_count_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="1,542" />

            <TextView
                android:id="@+id/movie_users_text_no_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text=" users." />


        </LinearLayout>



    </LinearLayout>
</LinearLayout>